--- a/opros/templates/polls/results.html
+++ b/opros/templates/polls/results.html
@@ -10,7 +10,7 @@
 
 <ul>
 {% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+    <li>{{ choice.choice_text }} -- {{ choice.votes }}</li>
     <div class="progress">
         <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{ choice.votes }}%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
